--- a/source/Sass/blocks/_social.scss
+++ b/source/Sass/blocks/_social.scss
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-wrap: wrap;
     padding: 5% 4% 9%;
   }
 }
