--- a/source/Sass/blocks/_social.scss
+++ b/source/Sass/blocks/_social.scss
@@ -9,7 +9,7 @@
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding: 5% 4% 9%;
+    padding: 50px 20px;
   }
 }
 
