--- a/source/Sass/blocks/_widget.scss
+++ b/source/Sass/blocks/_widget.scss
@@ -10,12 +10,12 @@
     max-width: 300px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
     padding-top: 18px;
   }
   &__img {
     width: 130px;
-    height: auto;
-    padding: 6px;
+    padding: 0;
+    margin: 0 6px 6px 0;
   }
 }
