--- a/source/Sass/blocks/_footer.scss
+++ b/source/Sass/blocks/_footer.scss
@@ -8,6 +8,7 @@
   &__wrapper {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
     padding-left: 46px;
