--- a/source/Sass/blocks/_slider.scss
+++ b/source/Sass/blocks/_slider.scss
@@ -32,10 +32,9 @@
   &__item-wrapper {
     display: flex;
     padding-top: 24px;
+    overflow-x: hidden;
   }
   &__item {
-    width: 770px;
-    height: 482px;
     &:first-child {
       margin-right: -540px;
       margin-top: 82px;
@@ -55,7 +54,7 @@
   &__footer {
     background-image: linear-gradient(to right, #211b19 0%, #4e3427 100%);
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     padding: 40px 62px 23px 60px;
     z-index: 5;
     position: relative;
@@ -63,6 +62,7 @@
   &__footer-info {
     display: flex;
     flex-direction: column;
+    padding-right: 200px;
   }
   &__footer-title span {
     color: $menu-link-hover;
@@ -79,7 +79,9 @@
     font-size: 18px;
     font-weight: 300;
   }
-  &__footer-button {}
+  &__footer-button {
+    padding-left: 200px;
+  }
   &__footer-link {
     box-shadow: inset 0 -3px 0 #736357;
     border-radius: 3px;
