--- a/source/Sass/blocks/_social.scss
+++ b/source/Sass/blocks/_social.scss
@@ -4,6 +4,7 @@
   justify-content: center;
   background-color: #191919;
   &__wrapper {
+    max-width: 1920px;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -13,8 +14,3 @@
   }
 }
 
-@media (max-width: $large) {
-  .social {
-    display: none;
-  }
-}
