--- a/source/Sass/blocks/_clients.scss
+++ b/source/Sass/blocks/_clients.scss
@@ -1,21 +1,28 @@
 .clients {
+  position: relative;
   width: 100%;
-  max-width: 1920px;
   padding-left: 0;
   padding-right: 0;
   padding-bottom: 0;
   display: flex;
   justify-content: center;
-  background: url('HTML5-JQuery-landing-demo/source/images/clients-bg.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
+  &:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+  }
   &__wrapper {
-    background-color: rgba(17, 17, 17, 0.5);
+    max-width: 1920px;
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 12% 8% 11% 6%;
+    z-index: 1;
+    padding: 150px 100px;
   }
   &__logo {
     display: flex;
