--- a/source/css/style.css
+++ b/source/css/style.css
@@ -995,18 +995,24 @@ body {
     margin-left: 6px; }
 
 .clients {
+  position: relative;
   width: 100%;
-  max-width: 1920px;
   padding-left: 0;
   padding-right: 0;
   padding-bottom: 0;
   display: flex;
-  justify-content: center;
-  background: url("HTML5-JQuery-landing-demo/source/images/clients-bg.jpg");
-  background-repeat: no-repeat;
-  background-size: cover; }
+  justify-content: center; }
+  .clients:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: rgba(0, 0, 0, 0.7); }
   .clients__wrapper {
-    background-color: rgba(17, 17, 17, 0.5);
+    max-width: 1920px;
     width: 100%;
     display: flex;
     flex-direction: row;
