--- a/source/css/style.css
+++ b/source/css/style.css
@@ -791,12 +791,12 @@ body {
 
 .statistics {
   width: 100%;
-  max-width: 1920px;
   background-image: linear-gradient(to right, #211b19 0%, #4e3427 100%);
   display: flex;
   justify-content: center; }
   .statistics__wrapper {
     width: 100%;
+    max-width: 1920px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -1009,7 +1009,6 @@ body {
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: -1;
     background: rgba(0, 0, 0, 0.7); }
   .clients__wrapper {
     max-width: 1920px;
@@ -1017,7 +1016,8 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 12% 8% 11% 6%; }
+    z-index: 1;
+    padding: 150px 100px; }
   .clients__logo {
     display: flex; }
 
