--- a/source/Sass/blocks/_slider.scss
+++ b/source/Sass/blocks/_slider.scss
@@ -55,7 +55,7 @@
     background-image: linear-gradient(to right, #211b19 0%, #4e3427 100%);
     display: flex;
     justify-content: center;
-    padding: 40px 62px 23px 60px;
+    padding: 25px 62px 25px 60px;
     z-index: 5;
     position: relative;
   }
@@ -63,6 +63,7 @@
     display: flex;
     flex-direction: column;
     padding-right: 200px;
+    align-self: center;
   }
   &__footer-title span {
     color: $menu-link-hover;
@@ -81,6 +82,7 @@
   }
   &__footer-button {
     padding-left: 200px;
+    align-self: center;
   }
   &__footer-link {
     box-shadow: inset 0 -3px 0 #736357;
