--- a/source/css/style.css
+++ b/source/css/style.css
@@ -451,14 +451,15 @@ body {
   background-image: linear-gradient(to right, #211b19 0%, #4e3427 100%);
   display: flex;
   justify-content: center;
-  padding: 40px 62px 23px 60px;
+  padding: 25px 62px 25px 60px;
   z-index: 5;
   position: relative; }
 
 .slider__footer-info {
   display: flex;
   flex-direction: column;
-  padding-right: 200px; }
+  padding-right: 200px;
+  align-self: center; }
 
 .slider__footer-title span {
   color: #c7b299; }
@@ -476,7 +477,8 @@ body {
   font-weight: 300; }
 
 .slider__footer-button {
-  padding-left: 200px; }
+  padding-left: 200px;
+  align-self: center; }
 
 .slider__footer-link {
   box-shadow: inset 0 -3px 0 #736357;
