header menu was aligned #13

--- a/source/Sass/blocks/_menu.scss
+++ b/source/Sass/blocks/_menu.scss
@@ -1,9 +1,10 @@
 .menu {
   position: absolute;
-  top: 53px;
+  top: 50px;
   right: 15px;
   display: flex;
   flex-direction: row;
+  align-items: center;
   list-style: none;
   &__item-link {
     text-decoration: none;
