--- a/source/css/style.css
+++ b/source/css/style.css
@@ -147,10 +147,11 @@ body {
 
 .menu {
   position: absolute;
-  top: 53px;
+  top: 50px;
   right: 15px;
   display: flex;
   flex-direction: row;
+  align-items: center;
   list-style: none; }
   .menu__item-link {
     text-decoration: none;
