header height was changed, logo and menu were aligned in the center of header #13

--- a/source/Sass/blocks/_logo.scss
+++ b/source/Sass/blocks/_logo.scss
@@ -3,7 +3,8 @@
   flex-direction: row;
   position: absolute;
   left: 30px;
-  top: 40px;
+  top: 50%;
+  transform: translate(0, -50%);
   cursor: pointer;
   &__img {
     width: 64px;
