--- a/source/Sass/blocks/_menu.scss
+++ b/source/Sass/blocks/_menu.scss
@@ -1,7 +1,8 @@
 .menu {
   position: absolute;
-  top: 50px;
+  top: 50%;
   right: 15px;
+  transform: translate(0, -50%);
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -47,8 +48,9 @@
     width: 40px;
     height: 40px;
     position: absolute;
-    top: 50px;
+    top: 50%;
     right: 40px;
+    transform: translate(0, -50%);
     padding: 0;
     z-index: 2;
     background-color: transparent;
@@ -61,7 +63,7 @@
     padding: 0;
     margin: 0;
     width: 100%;
-    top: 100px;
+    top: 292px;
     right: 0;
     left: 0;
     &__item {
