--- a/source/css/style.css
+++ b/source/css/style.css
@@ -99,7 +99,7 @@ body {
   flex-direction: row;
   justify-content: space-around;
   z-index: 10;
-  min-height: 140px;
+  min-height: 80px;
   width: 100vw;
   transition: background 0.5s ease; }
 
@@ -114,7 +114,8 @@ body {
   flex-direction: row;
   position: absolute;
   left: 30px;
-  top: 40px;
+  top: 50%;
+  transform: translate(0, -50%);
   cursor: pointer; }
   .logo__img {
     width: 64px;
@@ -147,8 +148,9 @@ body {
 
 .menu {
   position: absolute;
-  top: 50px;
+  top: 50%;
   right: 15px;
+  transform: translate(0, -50%);
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -186,8 +188,9 @@ body {
     width: 40px;
     height: 40px;
     position: absolute;
-    top: 50px;
+    top: 50%;
     right: 40px;
+    transform: translate(0, -50%);
     padding: 0;
     z-index: 2;
     background-color: transparent;
@@ -199,7 +202,7 @@ body {
     padding: 0;
     margin: 0;
     width: 100%;
-    top: 100px;
+    top: 292px;
     right: 0;
     left: 0; }
     .menu__item {
