--- a/source/css/style.css
+++ b/source/css/style.css
@@ -786,7 +786,7 @@ body {
     font-weight: 300;
     line-height: 2; }
     .mobile__list-item:before {
-      content: url("/source/images/icon-list-dot.svg");
+      content: url("../images/icon-list-dot.svg");
       position: absolute;
       left: -37px;
       top: 5px; }
