.post and .projects__item width was changed to 100% on mobile version #13

--- a/source/Sass/blocks/_post.scss
+++ b/source/Sass/blocks/_post.scss
@@ -100,3 +100,10 @@
     margin-left: 6px;
   }
 }
+@media (max-width: $small) {
+  .post {
+    border: none;
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+}
