--- a/source/Sass/blocks/_recent.scss
+++ b/source/Sass/blocks/_recent.scss
@@ -49,3 +49,12 @@
     }
   }
 }
+@media (max-width: $small) {
+  .recent {
+    padding-right: 0;
+    padding-left: 0;
+    &__wrapper {
+      width: 100%;
+    }
+  }
+}
