--- a/source/Sass/blocks/_projects.scss
+++ b/source/Sass/blocks/_projects.scss
@@ -102,7 +102,19 @@
     border: none;
   }
 }
-
+@media (max-width: $small) {
+  .projects {
+    padding-right: 0;
+    padding-left: 0;
+    &__wrapper {
+      width: 100%;
+    }
+    &__item {
+      margin-left: -15px;
+      margin-right: -15px;
+    }
+  }
+}
 .lds-ring {
   position: relative;
   width: 100%;
