--- a/source/css/style.css
+++ b/source/css/style.css
@@ -594,6 +594,16 @@ body {
   padding: 12px 43px;
   border: none; }
 
+@media (max-width: 576px) {
+  .projects {
+    padding-right: 0;
+    padding-left: 0; }
+    .projects__wrapper {
+      width: 100%; }
+    .projects__item {
+      margin-left: -15px;
+      margin-right: -15px; } }
+
 .lds-ring {
   position: relative;
   width: 100%;
@@ -906,6 +916,13 @@ body {
     .recent__button-left:hover, .recent__button-right:hover {
       fill: #c7b299; }
 
+@media (max-width: 576px) {
+  .recent {
+    padding-right: 0;
+    padding-left: 0; }
+    .recent__wrapper {
+      width: 100%; } }
+
 .post {
   position: relative;
   display: flex;
@@ -991,6 +1008,12 @@ body {
     border-left-color: #c7b299;
     margin-top: 6px;
     margin-left: 6px; }
+
+@media (max-width: 576px) {
+  .post {
+    border: none;
+    margin-left: -15px;
+    margin-right: -15px; } }
 
 .clients {
   position: relative;
