--- a/source/Sass/blocks/_mobile.scss
+++ b/source/Sass/blocks/_mobile.scss
@@ -76,6 +76,9 @@
 }
 @media (max-width: $small) {
   .mobile {
+    &__img {
+      width: 100vw;
+    }
     &__text-block {
       padding-right: 20px;
       padding-left: 20px;
