header menu width was matched with listing width #14

--- a/source/Sass/blocks/_page-header.scss
+++ b/source/Sass/blocks/_page-header.scss
@@ -7,6 +7,8 @@
   min-height: 80px;
   width: 100vw;
   transition: background 0.5s ease;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
 .sticky {
