--- a/source/css/style.css
+++ b/source/css/style.css
@@ -101,7 +101,9 @@ body {
   z-index: 10;
   min-height: 80px;
   width: 100vw;
-  transition: background 0.5s ease; }
+  transition: background 0.5s ease;
+  padding-right: 15px;
+  padding-left: 15px; }
 
 .sticky {
   position: fixed;
@@ -113,7 +115,7 @@ body {
   display: flex;
   flex-direction: row;
   position: absolute;
-  left: 30px;
+  left: 25px;
   top: 50%;
   transform: translate(0, -50%);
   cursor: pointer; }
@@ -149,7 +151,7 @@ body {
 .menu {
   position: absolute;
   top: 50%;
-  right: 15px;
+  right: 30px;
   transform: translate(0, -50%);
   display: flex;
   flex-direction: row;
