footer wrapper was aligned in the center #14

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1202,6 +1202,7 @@ body {
     flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
+    max-width: 1920px;
     padding-left: 46px;
     padding-right: 71px; }
 
