--- a/source/Sass/blocks/_footer.scss
+++ b/source/Sass/blocks/_footer.scss
@@ -11,6 +11,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
+    max-width: 1920px;
     padding-left: 46px;
     padding-right: 71px;
   }
