.mobile__img max-width was set as 100% #14

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -778,6 +778,8 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center; }
+  .mobile__img img {
+    max-width: 100%; }
   .mobile__text-block {
     padding-top: 105px;
     max-width: 660px; }
