--- a/source/Sass/blocks/_mobile.scss
+++ b/source/Sass/blocks/_mobile.scss
@@ -10,6 +10,9 @@
     flex-direction: row;
     justify-content: center;
   }
+  &__img img {
+    max-width: 100%;
+  }
   &__text-block {
     padding-top: 105px;
     max-width: 660px;
