--- a/source/css/style.css
+++ b/source/css/style.css
@@ -117,7 +117,8 @@ body {
   position: absolute;
   left: 25px;
   top: 50%;
-  transform: translate(0, -50%);
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
   cursor: pointer; }
   .logo__img {
     width: 64px;
@@ -152,7 +153,8 @@ body {
   position: absolute;
   top: 50%;
   right: 30px;
-  transform: translate(0, -50%);
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -192,7 +194,8 @@ body {
     position: absolute;
     top: 50%;
     right: 40px;
-    transform: translate(0, -50%);
+    -webkit-transform: translate(0, -50%);
+            transform: translate(0, -50%);
     padding: 0;
     z-index: 2;
     background-color: transparent;
@@ -556,7 +559,8 @@ body {
 .projects__item-img {
   position: absolute;
   height: 100%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   left: 50%;
   top: 50%; }
 
@@ -626,23 +630,37 @@ body {
   margin: 6px;
   border: 6px solid #000;
   border-radius: 50%;
-  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  -webkit-animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+          animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
   border-color: #000 transparent transparent transparent; }
 
 .lds-ring div:nth-child(1) {
-  animation-delay: -0.45s; }
+  -webkit-animation-delay: -0.45s;
+          animation-delay: -0.45s; }
 
 .lds-ring div:nth-child(2) {
-  animation-delay: -0.3s; }
+  -webkit-animation-delay: -0.3s;
+          animation-delay: -0.3s; }
 
 .lds-ring div:nth-child(3) {
-  animation-delay: -0.15s; }
+  -webkit-animation-delay: -0.15s;
+          animation-delay: -0.15s; }
+
+@-webkit-keyframes lds-ring {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg); }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg); } }
 
 @keyframes lds-ring {
   0% {
-    transform: rotate(0deg); }
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg); }
   100% {
-    transform: rotate(360deg); } }
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg); } }
 
 .category {
   display: flex;
