folder with preliminary styles for header menu buttom was added #10

--- a/source/Sass/style.scss
+++ b/source/Sass/style.scss
@@ -7,6 +7,8 @@
 @import "blocks/page-header.scss";
 @import "blocks/logo.scss";
 @import "blocks/menu.scss";
+@import "hamburgers-master/_sass/hamburgers/base.scss";
+@import "hamburgers-master/_sass/hamburgers/hamburgers";
 @import "blocks/sample.scss";
 @import "blocks/arrow.scss";
 @import "blocks/features.scss";
