styles for hamburger were removed #10

--- a/source/Sass/hamburgers-master/_sass/hamburgers/_base.scss
+++ b/source/Sass/hamburgers-master/_sass/hamburgers/_base.scss
@@ -1,3 +1,4 @@
+/*
 // Hamburger
 // ==================================================
 .hamburger {
@@ -87,3 +88,4 @@
     bottom: ($hamburger-layer-spacing + $hamburger-layer-height) * -1;
   }
 }
+*/
