--- a/source/Sass/style.scss
+++ b/source/Sass/style.scss
@@ -7,7 +7,7 @@
 @import "blocks/page-header.scss";
 @import "blocks/logo.scss";
 @import "blocks/menu.scss";
-//@import "hamburgers-master/_sass/hamburgers";
+@import "hamburgers-master/_sass/hamburgers/hamburgers.scss";
 @import "blocks/sample.scss";
 @import "blocks/arrow.scss";
 @import "blocks/features.scss";
