--- a/source/css/style.css
+++ b/source/css/style.css
@@ -180,6 +180,9 @@ body {
 .mobile-menu__button-icon {
   display: none; }
 
+.hamburger {
+  display: none; }
+
 @media (max-width: 992px) {
   .menu__item-link {
     font-size: 10px; }
@@ -187,6 +190,8 @@ body {
       font-size: 10px; } }
 
 @media (max-width: 768px) {
+  .hamburger {
+    display: inline-block; }
   .mobile-menu__button-icon {
     display: block;
     width: 40px;
@@ -239,11 +244,10 @@ body {
  * @link https://github.com/jonsuh/hamburgers
  */
 .hamburger {
-  padding-top: 15px;
-  padding-right: 15px;
-  padding-left: 15px;
-  padding-bottom: 15px;
-  display: inline-block;
+  /*padding-top: $hamburger-padding-y;
+  padding-right: $hamburger-padding-x;
+  padding-left: $hamburger-padding-x;
+  padding-bottom: $hamburger-padding-y;*/
   cursor: pointer;
   transition-property: opacity, -webkit-filter;
   transition-property: opacity, filter;
@@ -251,7 +255,7 @@ body {
   transition-duration: 0.15s;
   transition-timing-function: linear;
   font: inherit;
-  color: inherit;
+  color: white;
   text-transform: none;
   background-color: transparent;
   border: 0;
@@ -264,22 +268,24 @@ body {
   .hamburger.is-active .hamburger-inner,
   .hamburger.is-active .hamburger-inner::before,
   .hamburger.is-active .hamburger-inner::after {
-    background-color: #000; }
+    background-color: #c7b299; }
 
 .hamburger-box {
   width: 40px;
   height: 24px;
   display: inline-block;
-  position: relative; }
+  position: relative;
+  vertical-align: middle; }
 
 .hamburger-inner {
+  color: white;
   display: block;
   top: 50%;
   margin-top: -2px; }
   .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
     width: 40px;
     height: 4px;
-    background-color: #000;
+    background-color: #c7b299;
     border-radius: 4px;
     position: absolute;
     transition-property: -webkit-transform;
