--- a/source/Sass/blocks/_clients.scss
+++ b/source/Sass/blocks/_clients.scss
@@ -21,15 +21,17 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-wrap: wrap;
     z-index: 1;
     padding: 150px 100px;
   }
   &__logo {
     display: flex;
+    margin-bottom: 25px;
   }
 }
 
-@media (max-width: $large) {
+/*@media (max-width: $large) {
   .clients {
     display: none;
     &__wrapper {
@@ -40,8 +42,8 @@
       height: 150px;
     }
   }
-}
-@media (max-width: $medium) {
+}*/
+/*@media (max-width: $medium) {
   .clients {
     &__logo img {
       width: 120px;
@@ -56,4 +58,4 @@
       height: 100px;
     }
   }
-}
+}*/
