header menu on laptop version was aligned #16

--- a/source/Sass/blocks/_menu.scss
+++ b/source/Sass/blocks/_menu.scss
@@ -38,6 +38,7 @@
    .menu {
      &__item-link {
        font-size: 10px;
+       padding-right: 5px;
        &:hover {
          font-size: 10px;
        }
