--- a/source/Sass/blocks/_promo.scss
+++ b/source/Sass/blocks/_promo.scss
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     align-content: center;
-    padding: 16% 28% 14%;
+    padding: 70px 100px;
   }
   &__button {
     cursor: pointer;
@@ -18,8 +18,7 @@
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    background-color: #000000;
-    opacity: 0.2;
+    background-color: rgba(0,0,0,0.2);
     align-self: center;
   }
   &__button-img {
@@ -58,10 +57,6 @@
 
 @media (max-width: $large) {
   .promo {
-    display: none;
-    &__wrapper {
-      padding: 9% 28% 10%;
-    }
     &__description {
       padding-top: 37px;
     }
@@ -78,9 +73,6 @@
 }
 @media (max-width: $medium) {
   .promo {
-    &__wrapper {
-      padding: 6% 28% 7%;
-    }
     &__description {
       padding-top: 22px;
     }
@@ -102,13 +94,6 @@
     }
     &__description-title {
       font-size: 19px;
-    }
-    &__description-text {
-      font-size: 8px;
-    }
-    &__time {
-      font-size: 9px;
-      padding-top: 0px;
     }
   }
 }
