--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1615,15 +1615,14 @@ body {
     display: flex;
     flex-direction: column;
     align-content: center;
-    padding: 16% 28% 14%; }
+    padding: 70px 100px; }
   .promo__button {
     cursor: pointer;
     padding-top: 14px;
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    background-color: #000000;
-    opacity: 0.2;
+    background-color: rgba(0, 0, 0, 0.2);
     align-self: center; }
   .promo__button-img {
     z-index: 5;
@@ -1654,22 +1653,16 @@ body {
     line-height: 1.71; }
 
 @media (max-width: 992px) {
-  .promo {
-    display: none; }
-    .promo__wrapper {
-      padding: 9% 28% 10%; }
-    .promo__description {
-      padding-top: 37px; }
-    .promo__description-title {
-      font-size: 27px; }
-    .promo__description-text {
-      font-size: 12px; }
-    .promo__time {
-      font-size: 12px; } }
+  .promo__description {
+    padding-top: 37px; }
+  .promo__description-title {
+    font-size: 27px; }
+  .promo__description-text {
+    font-size: 12px; }
+  .promo__time {
+    font-size: 12px; } }
 
 @media (max-width: 768px) {
-  .promo__wrapper {
-    padding: 6% 28% 7%; }
   .promo__description {
     padding-top: 22px; }
   .promo__description-title {
@@ -1683,12 +1676,7 @@ body {
   .promo__description {
     padding-top: 17px; }
   .promo__description-title {
-    font-size: 19px; }
-  .promo__description-text {
-    font-size: 8px; }
-  .promo__time {
-    font-size: 9px;
-    padding-top: 0px; } }
+    font-size: 19px; } }
 
 .mobile {
   display: flex;
